[workspace]
resolver = "2"
members = [
    "crates/util",
    "crates/data-structures",
    "crates/formatter",
    "crates/parser",
    "crates/repl",
    "crates/vm",
    "crates/macros-core",
    "crates/decorators",
]
default-members = ["crates/repl"]

[workspace.package]
version = "0.0.1"
edition = "2021"

description = """# (**S-EXPR**essions)[https://en.wikipedia.org/wiki/S-expression] is a minimal lisp dialect to evaluate written in Rust.
"""

documentation = "https://docs.rs/sexprs"
readme = "README.md"
repository = "https://github.com/gabrielfalcao/sexprs"
homepage = "https://github.com/gabrielfalcao/sexprs"
license = "MIT OR Apache-2.0"
keywords = []
authors = ["Gabriel DeMoura <gabrielteratos@gmail.com>"]
categories = []

[workspace.dependencies]
clap = { version = "4.5.37", features = ["derive", "env", "string", "unicode", "wrap_help"] }
iocore = "3.0.3"
iocore-test = "3.0.3"
pest = {version = "2.8.0", features = ["pretty-print"]}
pest_meta = "2.8.0"
pest_derive = "2.8.0"
prettyplease = "0.2.32"
proc-macro2 = { version = "1.0.95", features = ["span-locations"] }
quote = "1.0.40"
rustyline = {version = "15.0.0", features = ["with-file-history", "with-sqlite-history", "rustyline-derive"]}

serde = { version = "1.0.219", features = ["derive"] }
syn = { version = "2.0.101", features = ["full"] }
syntect = "5.2.0"
unique-pointer =  { version = "0.5.0" }
sexprs-util = { path = "crates/util", version = "0.0.1"}
sexprs-formatter = { path = "crates/formatter", version = "0.0.1" }
sexprs-parser = { path = "crates/parser", version = "0.0.1" }
sexprs = { path = "crates/repl", version = "0.0.1" }
sexprs-data-structures = { path = "crates/data-structures", version = "0.0.1" }
sexprs-macros-core = { path = "crates/macros-core", version = "0.0.1" }
sexprs-decorators = { path = "crates/decorators", version = "0.0.1" }
sexprs-vm = { path = "crates/vm", version = "0.0.1" }
k9 = "0.12.0"
