[package]
name = "sexprs-formatter"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/sexprs-formatter"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

autoexamples = false
autobenches = false
autotests = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
iocore = { workspace = true }
syntect = { workspace = true }
prettyplease = { workspace = true }
sexprs-util = {workspace = true}

[dev-dependencies]
k9 = { workspace = true }

[[test]]
name = "test_format_data_structures"
path = "tests/test_format_data_structures.rs"

[[test]]
name = "test_format_token_stream"
path = "tests/test_format_token_stream.rs"

[[test]]
name = "test_format_token_tree"
path = "tests/test_format_token_tree.rs"
