[package]
name = "sexprs"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

autoexamples = false
autobenches = false
autotests = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[dependencies]
clap = { workspace = true }
iocore = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
rustyline = { workspace = true }

sexprs-formatter = { workspace = true }
sexprs-old-macros = { workspace = true }
sexprs-parser = { workspace = true }
sexprs-traits = { workspace = true }
sexprs-util = { workspace = true }
sexprs-vm = { workspace = true }
sexprs-data-structures = { workspace = true }

[dev-dependencies]
k9 = {workspace = true}

[lib]
name = "sexprs"
path = "src/lib.rs"
doctest = false
bench = false
test = true

[[bin]]
name = "sexprs"
path = "./sexprs.rs"
doctest = false
bench = false
doc = false
test = false
