[package]
name = "sexprs-parser"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/parser"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
autoexamples = false
autobenches = false
autotests = false

[[bin]]
name = "debug-parser"
path = "cli.rs"

[lib]
doctest = false
test = false
[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps"]

[dependencies]
pest = { workspace = true }
pest_meta = { workspace = true }
pest_derive = { workspace = true }
sexprs-util = { workspace = true }
sexprs-formatter = { workspace = true }
sexprs-data-structures = { workspace = true }

[dev-dependencies]
k9 = { workspace = true }

[[test]]
name = "test_parse"
path = "./tests/test_parse.rs"


[[test]]
name = "test_sexprs"
path = "./tests/test_sexprs.rs"
