[package]
name = "sexprs-util"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation = "https://docs.rs/sexprs-util"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

autoexamples = false
autobenches = false
autotests = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]
