[package]
name = "sexprs-vm"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

autoexamples = false
autobenches = false
autotests = false

[dependencies]
sexprs-util = { workspace = true }
sexprs-parser = { workspace = true }
sexprs-formatter = { workspace = true }
sexprs-data-structures = { workspace = true }
sexprs-decorators = { workspace = true }
unique-pointer =  { workspace = true    }
iocore = { workspace = true }

[features]
debug = []

[dev-dependencies]
k9 = { workspace = true }

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]


[[test]]
name = "test_defun"
path = "./tests/test_defun.rs"

[[test]]
name = "test_sexprs"
path = "./tests/test_sexprs.rs"

[[test]]
name = "test_list"
path = "./tests/test_list.rs"

[[test]]
name = "test_math"
path = "./tests/test_math.rs"

[[test]]
name = "test_string"
path = "./tests/test_string.rs"
